feat(nasha.react): add template on dashboard
ref:MANAGER-11381

Signed-off-by: stif59100 <steeve.vanderstocken@ovhcloud.com>

--- a/packages/manager/apps/nasha-react/src/public/translations/nasha-react/details/dashboard/Messages_fr_FR.json
+++ b/packages/manager/apps/nasha-react/src/public/translations/nasha-react/details/dashboard/Messages_fr_FR.json
@@ -3,5 +3,47 @@
   "subscriptions": "Abonnement",
   "configurations": "Configurations",
   "partitions": "Partitions",
-  "informations": "Informations"
+  "informations": "Informations",
+  "nasha_dashboard_actions": "Actions",
+  "nasha_dashboard_configuration_link": "Créer une partition",
+  "nasha_dashboard_configuration_quota": "Quota",
+  "nasha_dashboard_configuration_title": "Configuration",
+  "nasha_dashboard_edit": "Modifier",
+  "nasha_dashboard_information_datacenter": "Localisation du datacenter",
+  "nasha_dashboard_information_disk_size": "Taille de stockage",
+  "nasha_dashboard_information_disk_type": "Type de disque",
+  "nasha_dashboard_information_id": "ID Service",
+  "nasha_dashboard_information_name": "Nom",
+  "nasha_dashboard_information_title": "Informations",
+  "nasha_dashboard_tab_general_information": "Informations générales",
+  "nasha_dashboard_tab_partitions": "Partitions",
+  "nasha_dashboard_suscriptions_error": "Une erreur est survenue lors du chargement des données...",
+  "nasha_dashboard_suscriptions_manual_renew": "Renouvellement manuel",
+  "nasha_dashboard_suscriptions_automatic_renewal": "Renouvellement Automatique",
+  "nasha_dashboard_informations_success_message": "Votre modification a été faite avec succes",
+  "nasha_dashboard_informations_modification": "Modifier",
+  "nasha_dashboard_partitions_create": "Créer une partition",
+  "nasha_dashboard_loading": "Chargement en cours",
+  "manager_billing_subscription": "Abonnement",
+  "manager_billing_subscription_creation": "Date de création",
+  "manager_billing_subscription_next_due_date": "Prochaine échéance",
+  "manager_billing_subscription_engagement": "Engagement",
+  "manager_billing_subscription_engagement_status_none": "Aucun",
+  "manager_billing_subscription_contacts": "Contacts",
+  "manager_billing_subscription_contacts_admin": "Administrateur",
+  "manager_billing_subscription_contacts_tech": "Technique",
+  "manager_billing_subscription_contacts_billing": "Facturation",
+  "manager_billing_subscription_contacts_management": "Gérer les contacts",
+  "manager_billing_subscription_error": "Une erreur est survenue lors de la récupération des informations",
+  "manager_billing_subscription_engagement_commit": "S’engager",
+  "manager_billing_subscription_engagement_commit_again": "Se réengager",
+  "manager_billing_subscription_engagement_commit_with_discount": "S’engager et bénéficier d’une remise",
+  "manager_billing_subscription_engagement_commit_again_with_discount": "Se réengager et bénéficier d'une remise",
+  "manager_billing_subscription_engagement_status_engaged": "Se termine le",
+  "manager_billing_subscription_engagement_status_engaged_renew": "Se renouvelle le ",
+  "manager_billing_subscription_engagement_status_engaged_expired": "Terminé le ",
+  "manager_billing_subscription_engagement_status_commitement_pending": "Votre service sera engagé à partir du ",
+  "manager_billing_subscription_engagement_menu_actions_renewal": "Configurer le renouvellement",
+  "manager_billing_subscription_engagement_menu_actions_commitment": "Gérer mon engagement",
+  "manager_billing_subscription_engagement_menu_actions_resiliate": "Résilier"
 }
