--- a/packages/manager/modules/overthebox/src/overthebox/details/translations/Messages_de_DE.json
+++ b/packages/manager/modules/overthebox/src/overthebox/details/translations/Messages_de_DE.json
@@ -69,15 +69,12 @@
   "overTheBox_cancel_resiliation_success": "La résiliation de votre service {{service}} vient d'être annulée.",
   "overTheBox_statistics_bits_per_sec_legend": "bits/s",
   "overTheBox_expiration_warning_help": "Sie können die Kündigung vor dem Ablaufdatum stornieren.",
-  "overTheBox_detail_link_guide": "Anleitungen",
-  "overthebox_detail_links": "Links",
-  "overTheBox_service_id": "Kennung des Dienstes:",
   "overTheBox_release_channels": "Verfügbare Versionen",
   "overTheBox_change_release_channel_success": "Die Änderung der Version wurde erfolgreich durchgeführt.",
   "overTheBox_change_release_channel_error": "Die Änderung der Version konnte nicht durchgeführt werden: {{errorMessage}}",
   "overTheBox_release_channel_stable": "Stabile öffentliche Version",
-  "overTheBox_release_channel_testing": "Beta Version",
-  "overTheBox_release_channel_unstable": "Alpha-Version",
+  "overTheBox_release_channel_beta": "Beta-Version",
+  "overTheBox_release_channel_alpha": "Alpha-Version",
   "overTheBox_release_channel_develop": "Entwicklungsversion",
   "overTheBox_release_channel_rpi3": "Version für Raspberry 3",
   "overTheBox_version_device": "Hardware-Version",
@@ -86,6 +83,7 @@
   "overTheBox_last_seen_few_seconds": "Vor ein paar Sekunden",
   "overTheBox_last_seen_minutes_ago": "Es sind etwa {{lastSeenDiff}}",
   "overTheBox_reverse_dns": "DNS Reverse",
-  "overTheBox_release_channel_beta": "Beta-Version",
-  "overTheBox_release_channel_alpha": "Alpha-Version"
+  "overTheBox_detail_link_guide": "Anleitungen",
+  "overthebox_detail_links": "Links",
+  "overTheBox_service_id": "Kennung des Dienstes:"
 }
