--- a/packages/manager/modules/overthebox/src/overthebox/details/translations/Messages_en_GB.json
+++ b/packages/manager/modules/overthebox/src/overthebox/details/translations/Messages_en_GB.json
@@ -73,8 +73,8 @@
   "overTheBox_change_release_channel_success": "Version successfully changed",
   "overTheBox_change_release_channel_error": "We were unable to change the version: {{errorMessage}}",
   "overTheBox_release_channel_stable": "General public stable version",
-  "overTheBox_release_channel_testing": "Beta version",
-  "overTheBox_release_channel_unstable": "Alpha version",
+  "overTheBox_release_channel_beta": "Beta version",
+  "overTheBox_release_channel_alpha": "Alpha version",
   "overTheBox_release_channel_develop": "Development version",
   "overTheBox_release_channel_rpi3": "Raspberry 3 version",
   "overTheBox_version_device": "Hardware version",
@@ -85,7 +85,5 @@
   "overTheBox_reverse_dns": "Reverse DNS",
   "overTheBox_detail_link_guide": "Guides",
   "overthebox_detail_links": "Links",
-  "overTheBox_service_id": "Service ID:",
-  "overTheBox_release_channel_beta": "Beta version",
-  "overTheBox_release_channel_alpha": "Alpha version"
+  "overTheBox_service_id": "Service ID:"
 }
