--- a/packages/manager/modules/overthebox/src/overthebox/details/translations/Messages_it_IT.json
+++ b/packages/manager/modules/overthebox/src/overthebox/details/translations/Messages_it_IT.json
@@ -69,15 +69,12 @@
   "overTheBox_cancel_resiliation_success": "La disattivazione del servizio {{service}} è stata annullata.",
   "overTheBox_statistics_bits_per_sec_legend": "bits/s",
   "overTheBox_expiration_warning_help": "La disattivazione può essere annullata prima della data di scadenza del servizio.",
-  "overTheBox_detail_link_guide": "Guide",
-  "overthebox_detail_links": "Link",
-  "overTheBox_service_id": "Identificativo del servizio:",
   "overTheBox_release_channels": "Versioni disponibili",
   "overTheBox_change_release_channel_success": "La modifica della versione è stata effettuata correttamente.",
   "overTheBox_change_release_channel_error": "Non è stato possibile effettuare la modifica della versione: {{errorMessage}}",
   "overTheBox_release_channel_stable": "Versione stabile pubblica",
-  "overTheBox_release_channel_testing": "Versione beta",
-  "overTheBox_release_channel_unstable": "Versione alpha",
+  "overTheBox_release_channel_beta": "Versione beta",
+  "overTheBox_release_channel_alpha": "Versione alpha",
   "overTheBox_release_channel_develop": "Versione di sviluppo",
   "overTheBox_release_channel_rpi3": "Versione per Raspberry 3",
   "overTheBox_version_device": "Versione dell'hardware",
@@ -86,6 +83,7 @@
   "overTheBox_last_seen_few_seconds": "Qualche secondo fa",
   "overTheBox_last_seen_minutes_ago": "Ci sono circa {{lastSeenDiff}}",
   "overTheBox_reverse_dns": "Reverse DNS",
-  "overTheBox_release_channel_beta": "Versione beta",
-  "overTheBox_release_channel_alpha": "Versione alpha"
+  "overTheBox_detail_link_guide": "Guide",
+  "overthebox_detail_links": "Link",
+  "overTheBox_service_id": "Identificativo del servizio:"
 }
