--- a/packages/manager/modules/overthebox/src/overthebox/details/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/overthebox/src/overthebox/details/translations/Messages_pt_PT.json
@@ -69,15 +69,12 @@
   "overTheBox_cancel_resiliation_success": "La résiliation de votre service {{service}} vient d'être annulée.",
   "overTheBox_statistics_bits_per_sec_legend": "bits/s",
   "overTheBox_expiration_warning_help": "Pode anular a rescisão antes da data de expiração.",
-  "overTheBox_detail_link_guide": "Manuais",
-  "overthebox_detail_links": "Links",
-  "overTheBox_service_id": "Identificador do serviço:",
   "overTheBox_release_channels": "Versões disponíveis",
   "overTheBox_change_release_channel_success": "A alteração da versão foi efetuada com sucesso.",
   "overTheBox_change_release_channel_error": "Não foi possível alterar a versão: {{errorMessage}}",
   "overTheBox_release_channel_stable": "Versão estável grande pública",
-  "overTheBox_release_channel_testing": "Versão beta",
-  "overTheBox_release_channel_unstable": "Versão alfa",
+  "overTheBox_release_channel_beta": "Versão beta",
+  "overTheBox_release_channel_alpha": "Versão alfa",
   "overTheBox_release_channel_develop": "Versão de desenvolvimento",
   "overTheBox_release_channel_rpi3": "Versão para Raspberry 3",
   "overTheBox_version_device": "Versão do material",
@@ -86,6 +83,7 @@
   "overTheBox_last_seen_few_seconds": "Há alguns segundos",
   "overTheBox_last_seen_minutes_ago": "Há cerca de {{lastSeenDiff}}",
   "overTheBox_reverse_dns": "Reverse DNS",
-  "overTheBox_release_channel_beta": "Versão beta",
-  "overTheBox_release_channel_alpha": "Versão alfa"
+  "overTheBox_detail_link_guide": "Manuais",
+  "overthebox_detail_links": "Links",
+  "overTheBox_service_id": "Identificador do serviço:"
 }
