--- a/packages/manager/modules/pci/src/projects/project/ai/apps/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/translations/Messages_fr_FR.json
@@ -4,16 +4,14 @@
   "pci_ai_tokens_title": "Tokens",
   "pci_ai_app_list_title": "Mes apps",
   "pci_ai_app_list_name": "Nom",
+  "pci_ai_app_list_image": "Image",
+  "pci_ai_app_list_image_provided_by": "Image fournie par {{partnerName}}",
   "pci_ai_app_list_region": "Région",
   "pci_ai_app_list_environment": "Environnement",
-  "pci_ai_app_list_cpu": "CPU",
-  "pci_ai_app_list_gpu": "GPU",
-  "pci_ai_app_list_privacy": "Confidentialité",
-  "pci_ai_app_list_replicas": "Réplicas",
-  "pci_ai_app_list_privacy_private": "Privée",
-  "pci_ai_app_list_privacy_public": "Publique",
+  "pci_ai_app_list_resources": "Ressources déployées",
+  "pci_ai_app_list_resources_cpu": "{{cpu}} CPU / {{replicas}} replicas",
+  "pci_ai_app_list_resources_gpu": "{{gpu}} GPU / {{replicas}} replicas",
   "pci_ai_app_list_status": "Statut",
-
   "pci_ai_app_list_status_QUEUED": "En attente",
   "pci_ai_app_list_status_INITIALIZING": "Initialisation",
   "pci_ai_app_list_status_SCALING": "Mise à l'échelle",
@@ -24,7 +22,6 @@
   "pci_ai_app_list_status_DELETED": "Supprimé",
   "pci_ai_app_list_status_FAILED": "Echoué",
   "pci_ai_app_list_status_ERROR": "Erreur",
-
   "pci_ai_app_list_access": "Accès",
   "pci_ai_app_list_create_app": "Déployer une app",
   "pci_ai_app_list_details": "Détails",
