--- a/packages/manager/modules/pci/src/projects/new/components/voucher/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/new/components/voucher/translations/Messages_fr_FR.json
@@ -8,6 +8,15 @@
   "pci_projects_new_voucher_form_field_error_invalid": "Le code saisi est incorrect.",
   "pci_projects_new_voucher_form_field_error_too_many_attempt": "Vous avez saisi des codes promotionnels erronés, veuillez réessayer plus tard.",
   "pci_projects_new_voucher_form_field_error_no_longer_valid": "Le code saisi n'est plus valide.",
+  "pci_projects_new_voucher_form_field_error_already_used": "Le code que vous avez saisi a déjà été utilisé.",
+  "pci_projects_new_voucher_form_field_error_expired": " Le code que vous avez saisi n'est plus valide.",
+  "pci_projects_new_voucher_form_field_error_country": "Le code que vous avez saisi n'est pas disponible pour ce pays.",
+  "pci_projects_new_voucher_form_field_error_payment_mean": " Vous devez renseigner un moyen de paiement afin de pouvoir utiliser ce code.",
+  "pci_projects_new_voucher_form_field_error_too_many_used": " Oups ! le code que vous avez saisi a dépassé le nombre de fois où il peut être utilisé.",
+  "pci_projects_new_voucher_form_field_error_nichandle": "Le code que vous avez saisi ne peut pas être utilisé pour ce nic.",
+  "pci_projects_new_voucher_form_field_error_scored": " Oups ! votre compte n'est pas éligible à l'utilisation de ce code.",
+  "pci_projects_new_voucher_form_field_error_voucher_new_customer": "Oups ! le code que vous avez saisi n'est valide que pour les nouveaux clients.",
+  "pci_projects_new_voucher_form_field_error_new_project": "Oups ! vous avez déjà un projet, le code n'est pas disponible.",
   "pci_projects_new_voucher_form_field_error_default": "Une erreur est survenue lors de la vérification du code.",
   "pci_projects_new_voucher_form_add": "Ajouter",
   "pci_projects_new_voucher_form_add_title": "Ajouter un bon d'achat",
