fix(i18n): add missing translations [CDS 2279]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_de_DE.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_de_DE.json
@@ -19,7 +19,7 @@
   "signup_field_firstname": "Vorname",
   "signup_field_name": "Name",
   "signup_field_email": "E-Mail",
-  "signup_field_commercialCommunicationsApproval": "Ich bin damit einverstanden, Informationen zu den OVHcloud Produkten zu erhalten",
+  "signup_field_commercialCommunicationsApproval": "Ich bin damit einverstanden, E-Mails zu Neuheiten und kommerziellen Angeboten von OVHcloud zu erhalten",
   "signup_field_password": "Passwort",
   "signup_field_corporationType": "Rechtsform",
   "signup_field_organisation": "Organisation",
