--- a/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_en_GB.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_en_GB.json
@@ -19,7 +19,7 @@
   "signup_field_firstname": "First name",
   "signup_field_name": "Name",
   "signup_field_email": "Email address",
-  "signup_field_commercialCommunicationsApproval": "I agree to receive information about OVHcloud products.",
+  "signup_field_commercialCommunicationsApproval": "I agree to receive emails regarding OVHcloud news and commercial offers",
   "signup_field_password": "Password",
   "signup_field_corporationType": "Type of company ",
   "signup_field_organisation": "Organisation",
