--- a/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_es_ES.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_es_ES.json
@@ -19,7 +19,7 @@
   "signup_field_firstname": "Nombre",
   "signup_field_name": "Nombre",
   "signup_field_email": "Correo electrónico",
-  "signup_field_commercialCommunicationsApproval": "Acepto recibir información relativa a los productos de OVH.",
+  "signup_field_commercialCommunicationsApproval": "Acepto recibir mensajes de correo electrónico sobre las novedades y ofertas comerciales de OVHcloud",
   "signup_field_password": "Contraseña",
   "signup_field_corporationType": "Tipo de empresa",
   "signup_field_organisation": "Organización",
