--- a/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_it_IT.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_it_IT.json
@@ -19,7 +19,7 @@
   "signup_field_firstname": "Nome",
   "signup_field_name": "Nome",
   "signup_field_email": "Email",
-  "signup_field_commercialCommunicationsApproval": "Accetto di ricevere informazioni relative ai servizi OVH.",
+  "signup_field_commercialCommunicationsApproval": "Accetto di ricevere email relative a novità e offerte commerciali di OVHcloud",
   "signup_field_password": "Password",
   "signup_field_corporationType": "Tipo di azienda",
   "signup_field_organisation": "Organizzazione",
