--- a/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_pl_PL.json
@@ -19,7 +19,7 @@
   "signup_field_firstname": "Imię",
   "signup_field_name": "Nazwisko",
   "signup_field_email": "Adres e-mail",
-  "signup_field_commercialCommunicationsApproval": "Wyrażam zgodę na otrzymywanie wiadomości dotyczących produktów OVHcloud.",
+  "signup_field_commercialCommunicationsApproval": "Wyrażam zgodę na otrzymywanie e-maili dotyczących nowości i ofert handlowych OVHcloud",
   "signup_field_password": "Hasło",
   "signup_field_corporationType": "Rodzaj firmy",
   "signup_field_organisation": "Organizacja",
