--- a/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_pt_PT.json
@@ -19,7 +19,7 @@
   "signup_field_firstname": "Nome",
   "signup_field_name": "Nome",
   "signup_field_email": "E-mail",
-  "signup_field_commercialCommunicationsApproval": "Concordo em receber informações sobre produtos da OVH",
+  "signup_field_commercialCommunicationsApproval": "Aceito receber e-mails relativos às novidades e ofertas comerciais da OVHcloud",
   "signup_field_password": "Palavra-passe",
   "signup_field_corporationType": "Tipo de empresa",
   "signup_field_organisation": "Organização",
