feat(*): display ICE num instead of VAT num for customers in Morocco
ref: MANAGER-11390

Signed-off-by: David Arsène <david.arsene.ext@ovhcloud.com>

--- a/packages/manager/modules/sign-up/src/components/siret/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/sign-up/src/components/siret/translations/Messages_fr_FR.json
@@ -14,8 +14,10 @@
   "siret_suggest_siret": "SIRET :",
   "siret_suggest_siren": "SIREN :",
   "siret_vat": "N° TVA",
+  "siret_iceNumber": "N° ICE",
   "siret_siret": "N° SIRET",
   "siret_vat_helper": "Le numéro de TVA est une mention obligatoire à faire figurer sur vos factures pour tout montant supérieur à 150€.",
+  "siret_iceNumber_helper": "Le numéro ICE est une mention obligatoire sur vos factures pour toutes les entreprises Marocaines.",
   "siret_optional": "facultatif",
   "siret_information_confirmation_is_correct": "Je confirme l'exactitude des informations",
   "siret_manual_title": "Ajoutez votre entreprise manuellement :",
