--- a/packages/manager/modules/bm-server-components/src/netboot/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/bm-server-components/src/netboot/translations/Messages_fr_FR.json
@@ -15,6 +15,8 @@
   "server_configuration_netboot_option_rescue": "Booter en mode rescue",
   "server_configuration_netboot_option_network": "Booter en mode network",
   "server_configuration_netboot_configuration": "Configuration :",
+  "server_configuration_netboot_rescue_help": "Le rescue peut-être utile pour diagnostiquer des dysfonctionnements matériels sur un serveur dédié.",
+  "server_configuration_netboot_rescue_help_link": "Accéder au guide de diagnostic matériel.",
   "server_configuration_netboot_rescue_choice": "Rescue disponible :",
   "server_configuration_netboot_rescue_mail": "Recevoir les identifiants du mode sur l'adresse e-mail :",
   "server_configuration_netboot_rescue_mail_invalid": "Invalide",
