fix(iam): fix wording in update identities section
ref: MANAGER-11361 MANAGER-11362

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/modules/iam/src/components/policyIdentities/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/iam/src/components/policyIdentities/translations/Messages_fr_FR.json
@@ -1,8 +1,8 @@
 {
   "iam_policy_identities_title": "Gérez les identités de la politique {{ policy }}",
-  "iam_policy_identities_description": "Vous pouvez associer ou supprimer des identités à votre politique (utilisateurs, NIC, email, groupes d'utilisateurs...)",
+  "iam_policy_identities_description": "Vous pouvez associer ou supprimer des identités à votre politique (utilisateurs, NIC, e-mail, groupes d'utilisateurs...)",
   "iam_policy_identities_guide_text": "Guides",
-  "iam_policy_identities_field_users_selection_label": "Users & sub-users",
+  "iam_policy_identities_field_users_selection_label": "Utilisateurs et sous-utilisateurs",
   "iam_policy_identities_field_users_selection_placeholder": "NIC, utilisateurs, groupes d'utilisateurs...",
   "iam_policy_identities_field_users_button_add": "Ajouter",
   "iam_policy_identities_error_load_users": "Une erreur est survenue lors de la récupération de vos utilisateurs : {{ message }}",
