--- a/packages/manager/apps/web/client/app/components/hosting-domain-offers/translations/Messages_fr_FR.json
+++ b/packages/manager/apps/web/client/app/components/hosting-domain-offers/translations/Messages_fr_FR.json
@@ -31,5 +31,5 @@
   "web_components_hosting_domain_offers_offer_badge_current": "Offre actuelle",
   "web_components_hosting_domain_offers_offer_select_version_placeholder": "Choisir une version",
   "web_components_hosting_domain_offers_offer_select_version_performance": "{{coreNumber}} vCores, {{ramSize}} RAM",
-  "web_components_hosting_domain_offers_offer_price": "{{priceValue}} TTC/mois"
+  "web_components_hosting_domain_offers_offer_price": "{{priceValue}} HT/mois"
 }
