fix(iam): fix wording for my actions on policy section
ref: MANAGER-11337

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/modules/iam/src/components/actionSelect/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/iam/src/components/actionSelect/translations/Messages_fr_FR.json
@@ -1,5 +1,5 @@
 {
-  "iam_action_select_action_custom_heading": "Mes actions",
+  "iam_action_select_action_custom_heading": "Actions ajoutées manuellement",
   "iam_action_select_action_search_label": "Rechercher une action",
   "iam_action_select_all_actions_description": "[TODO] iam_action_select_all_actions_description",
   "iam_action_select_all_actions_label": "Autoriser toutes les actions",
