--- a/packages/manager/apps/dedicated/client/app/account/identity-documents/translations/Messages_fr_FR.json
+++ b/packages/manager/apps/dedicated/client/app/account/identity-documents/translations/Messages_fr_FR.json
@@ -16,5 +16,7 @@
   "user_account_identity_documents_go_back_to_dashboard": "Voir mon tableau de bord",
   "user_account_identity_documents_legal_info1": "OVH S.A.S est le responsable du traitement de vos données personnelles. Les données collectées via ce formulaire sont traitées afin de se conformer aux <a href=\"{{ link1 }}\" target=\"_blank\">Directives de cybersécurité du 28.04.2022</a> publiées par le CERT-IN en vertu des dispositions de la sous-section (6) de <a href=\"{{ link2 }}\" target=\"_blank\">l'article 70B</a> de la Loi de 2000 ",
   "user_account_identity_documents_legal_info2": "sur la technologie de l'information relatives aux pratiques, aux procédures, à la prévention, à l'intervention et au signalement de cyberincidents de sécurité et de confiance sur Internet.",
-  "user_account_identity_documents_legal_info3": "Pour en savoir plus sur le traitement de vos données personnelles et connaître vos droits, vous pouvez consulter notre <a href=\"{{ link }}\" target=\"_blank\">Politique d’utilisation des données à caractère personnel.</a>"
+  "user_account_identity_documents_legal_info3": "Pour en savoir plus sur le traitement de vos données personnelles et connaître vos droits, vous pouvez consulter notre <a href=\"{{ link }}\" target=\"_blank\">Politique d’utilisation des données à caractère personnel.</a>",
+  "user_account_identity_documents_verification_in_progress_info": "Le traitement de vos documents est actuellement en cours d'analyse par notre équipe.",
+  "user_account_identity_documents_verification_waiting_info": "Votre demande a été analysée mais nécessite des documents complémentaires. Veuillez consulter votre ticket de support."
 }
