--- a/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_it_IT.json
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/details/translations/Messages_it_IT.json
@@ -1126,5 +1126,6 @@
   "server_nutanix_cluster_node_warning_2": "Consigliamo di apportare tutte le modifiche di configurazione direttamente nella dashboard del server associato al cluster Nutanix: {{clusterNodeDashboardLink}}",
   "server_nutanix_cluster_node_warning_3": "Tutte le azioni di fatturazione associate a questo server sono visibili sul cluster Nutanix: {{clusterDashboardLink}}",
   "server_rtm_eol_info": "Informazione importante sull'obsolescenza di Real Time Monitoring: il servizio continuerà a funzionare fino al 30 giugno 2022. A partire da questa data la visualizzazione dei dati di consumo verrà interrotta, senza impatto sul funzionamento del tuo server.",
-  "server_configuration_installation_NONE": "Nessuno"
+  "server_configuration_installation_NONE": "Nessuno",
+  "server_configuration_installation_ovh_desktop_BACKUP": "Backup"
 }
