feat(web): applied offer step changes
ref: MANAGER-10993

Signed-off-by: Mohammed ZAHAF <mohammed.zahaf.ext@ovhcloud.com>

--- a/packages/manager/apps/web/client/app/components/hosting-domain-offers/translations/Messages_fr_FR.json
+++ b/packages/manager/apps/web/client/app/components/hosting-domain-offers/translations/Messages_fr_FR.json
@@ -27,7 +27,9 @@
   "web_components_hosting_domain_offers_offer_performance_technicals_services": "{{value1}} × service SQL/NoSQL - DB illimité",
   "web_components_hosting_domain_offers_offer_performance_technicals_cdn": "CDN basic",
   "web_components_hosting_domain_offers_offer_badge_new": "New",
+  "web_components_hosting_domain_offers_offer_badge_upgrade": "Upgrade",
   "web_components_hosting_domain_offers_offer_badge_equal": "Offre équivalente sans surcoût",
+  "web_components_hosting_domain_offers_offer_badge_downgrade": "Downgrade",
   "web_components_hosting_domain_offers_offer_badge_current": "Offre actuelle",
   "web_components_hosting_domain_offers_offer_select_version_placeholder": "Choisir une version",
   "web_components_hosting_domain_offers_offer_select_version_performance": "{{coreNumber}} vCores, {{ramSize}} RAM",
