--- a/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_fr_FR.json
+++ b/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_fr_FR.json
@@ -1059,7 +1059,8 @@
   "hosting_order_upgrade_price_TTC": "Prix total TTC :",
   "hosting_order_upgrade_success": "La commande numéro <a href='{{t0}}' target='_blank'>{{t1}}</a> a bien été prise en compte.",
   "hosting_order_upgrade_error": "Une erreur est survenue lors de la modification de votre offre d'hébergement mutualisé.",
-  "hosting_order_upgrade_modal_header": "Changer d'offre",
+  "hosting_order_upgrade_modal_header": "Modifiez votre offre",
+  "hosting_order_upgrade_modal_header_description": "Votre projet évolue ? Blog, site professionnel, plateforme e-commerce ou application web : choisissez l’offre la plus adaptée à vos nouveaux besoins.",
   "hosting_order_upgrade_step_header_offer": "Offre",
   "hosting_order_upgrade_step_header_duration": "Durée",
   "hosting_order_upgrade_step_header_start_time": "Heure de la mise à jour",
